Archive2/36/54efe07156987d/output
main.cpp:98:1: error: 'tenplate' does not name a type
 tenplate
 ^
